[project]
name = "python-hilo"
version = "2026.3.5"
description = "A Python3, async interface to the Hilo API"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "David Vallee Delisle", email = "me@dvd.dev" },
]
maintainers = [
    { name = "David Vallee Delisle", email = "me@dvd.dev" },
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Framework :: aiohttp",
    "Topic :: Home Automation",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.2.1",
    "pysignalr>=1.3.0",
    "backoff>=1.11.1",
    "python-dateutil>=2.8.2",
    "pyyaml>=6.0.2",
    "httpx[http2]>=0.27.0",
    "httpx-sse>=0.4.0",
]

[project.urls]
Repository = "https://github.com/dvd-dev/python-hilo"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.hatch.build.targets.wheel]
packages = ["pyhilo"]

[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", "__pycache__", ".venv", "docs/source/conf.py", "old", "build", "dist"]

[tool.ruff.lint]
select = ["B", "C", "C90", "E", "F", "W", "T20", "I"]
ignore = ["E203", "E266", "E501", "F811"]

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true
known-first-party = ["examples", "script", "pyhilo", "tests"]
forced-separate = ["tests"]
split-on-trailing-comma = true

[tool.mypy]
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
follow_imports = "silent"
ignore_missing_imports = true
no_implicit_optional = true
python_version = "3.11"
show_error_codes = true
strict_equality = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true
exclude = ".venv/.*"
